// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDataTable should render correctly with a custom className 1`] = `
<div
  style={
    Object {
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <div
    className="ReactVirtualized__Table bpk-data-table custom-data-table"
    id={undefined}
    role="grid"
    style={Object {}}
  >
    <div
      className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
      role="row"
      style={
        Object {
          "height": 60,
          "overflow": "hidden",
          "paddingRight": 0,
          "width": 0,
        }
      }
    >
      <div
        aria-label="Name"
        aria-sort="ascending"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Name"
        >
          Name
        </span>
        <svg
          className="ReactVirtualized__Table__sortableHeaderIcon ReactVirtualized__Table__sortableHeaderIcon--ASC"
          height={18}
          viewBox="0 0 24 24"
          width={18}
        >
          <path
            d="M7 14l5-5 5 5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        aria-label="Description"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "1 1 100px",
            "flex": "1 1 100px",
            "msFlex": "1 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Description"
        >
          Description
        </span>
      </div>
      <div
        aria-label="Bla"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Bla"
        >
          Bla
        </span>
      </div>
    </div>
    <div
      aria-label="grid"
      aria-readonly={true}
      className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
      id={undefined}
      onScroll={[Function]}
      role="rowgroup"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "boxSizing": "border-box",
          "direction": undefined,
          "height": 140,
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "width": 0,
          "willChange": "transform",
        }
      }
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`BpkDataTable should render correctly with a specified width 1`] = `
<div
  className="ReactVirtualized__Table bpk-data-table"
  id={undefined}
  role="grid"
  style={Object {}}
>
  <div
    className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
    role="row"
    style={
      Object {
        "height": 60,
        "overflow": "hidden",
        "paddingRight": 0,
        "width": 400,
      }
    }
  >
    <div
      aria-label="Name"
      aria-sort="ascending"
      className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="columnheader"
      style={
        Object {
          "WebkitFlex": "0 1 100px",
          "flex": "0 1 100px",
          "msFlex": "0 1 100px",
        }
      }
      tabIndex={0}
    >
      <span
        className="ReactVirtualized__Table__headerTruncatedText"
        title="Name"
      >
        Name
      </span>
      <svg
        className="ReactVirtualized__Table__sortableHeaderIcon ReactVirtualized__Table__sortableHeaderIcon--ASC"
        height={18}
        viewBox="0 0 24 24"
        width={18}
      >
        <path
          d="M7 14l5-5 5 5z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <div
      aria-label="Description"
      className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="columnheader"
      style={
        Object {
          "WebkitFlex": "1 1 100px",
          "flex": "1 1 100px",
          "msFlex": "1 1 100px",
        }
      }
      tabIndex={0}
    >
      <span
        className="ReactVirtualized__Table__headerTruncatedText"
        title="Description"
      >
        Description
      </span>
    </div>
    <div
      aria-label="Bla"
      className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="columnheader"
      style={
        Object {
          "WebkitFlex": "0 1 100px",
          "flex": "0 1 100px",
          "msFlex": "0 1 100px",
        }
      }
      tabIndex={0}
    >
      <span
        className="ReactVirtualized__Table__headerTruncatedText"
        title="Bla"
      >
        Bla
      </span>
    </div>
  </div>
  <div
    aria-label="grid"
    aria-readonly={true}
    className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
    id={undefined}
    onScroll={[Function]}
    role="rowgroup"
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "boxSizing": "border-box",
        "direction": undefined,
        "height": 140,
        "overflowX": "hidden",
        "overflowY": "hidden",
        "position": "relative",
        "width": 400,
        "willChange": "transform",
      }
    }
    tabIndex={0}
  >
    <div
      className="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style={
        Object {
          "height": 120,
          "maxHeight": 120,
          "maxWidth": 400,
          "overflow": "hidden",
          "pointerEvents": "",
          "position": "relative",
          "width": "auto",
        }
      }
    >
      <div
        aria-label="row"
        className="ReactVirtualized__Table__row bpk-data-table__row"
        onClick={[Function]}
        role="row"
        style={
          Object {
            "height": 60,
            "left": 0,
            "overflow": "hidden",
            "paddingRight": 0,
            "position": "absolute",
            "top": 0,
            "width": 400,
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Table__rowColumn bpk-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Jose"
        >
          Jose
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "1 1 100px",
              "flex": "1 1 100px",
              "msFlex": "1 1 100px",
              "overflow": "hidden",
            }
          }
          title="Software Engineer"
        >
          Software Engineer
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Bla"
        >
          Bla
        </div>
      </div>
      <div
        aria-label="row"
        className="ReactVirtualized__Table__row bpk-data-table__row"
        onClick={[Function]}
        role="row"
        style={
          Object {
            "height": 60,
            "left": 0,
            "overflow": "hidden",
            "paddingRight": 0,
            "position": "absolute",
            "top": 60,
            "width": 400,
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Table__rowColumn bpk-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Rolf"
        >
          Rolf
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "1 1 100px",
              "flex": "1 1 100px",
              "msFlex": "1 1 100px",
              "overflow": "hidden",
            }
          }
          title="Some guy"
        >
          Some guy
        </div>
        <div
          className="ReactVirtualized__Table__rowColumn bpk-column"
          role="gridcell"
          style={
            Object {
              "WebkitFlex": "0 1 100px",
              "flex": "0 1 100px",
              "msFlex": "0 1 100px",
              "overflow": "hidden",
            }
          }
          title="Bla"
        >
          Bla
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BpkDataTable should render correctly with multiple columns 1`] = `
<div
  style={
    Object {
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <div
    className="ReactVirtualized__Table bpk-data-table"
    id={undefined}
    role="grid"
    style={Object {}}
  >
    <div
      className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
      role="row"
      style={
        Object {
          "height": 60,
          "overflow": "hidden",
          "paddingRight": 0,
          "width": 0,
        }
      }
    >
      <div
        aria-label="Name"
        aria-sort="ascending"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Name"
        >
          Name
        </span>
        <svg
          className="ReactVirtualized__Table__sortableHeaderIcon ReactVirtualized__Table__sortableHeaderIcon--ASC"
          height={18}
          viewBox="0 0 24 24"
          width={18}
        >
          <path
            d="M7 14l5-5 5 5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        aria-label="Description"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "1 1 100px",
            "flex": "1 1 100px",
            "msFlex": "1 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Description"
        >
          Description
        </span>
      </div>
      <div
        aria-label="Bla"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Bla"
        >
          Bla
        </span>
      </div>
    </div>
    <div
      aria-label="grid"
      aria-readonly={true}
      className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
      id={undefined}
      onScroll={[Function]}
      role="rowgroup"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "boxSizing": "border-box",
          "direction": undefined,
          "height": 140,
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "width": 0,
          "willChange": "transform",
        }
      }
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`BpkDataTable should render correctly with no data; only headers 1`] = `
<div
  style={
    Object {
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <div
    className="ReactVirtualized__Table bpk-data-table"
    id={undefined}
    role="grid"
    style={Object {}}
  >
    <div
      className="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
      role="row"
      style={
        Object {
          "height": 60,
          "overflow": "hidden",
          "paddingRight": 0,
          "width": 0,
        }
      }
    >
      <div
        aria-label="Name"
        aria-sort="ascending"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Name"
        >
          Name
        </span>
        <svg
          className="ReactVirtualized__Table__sortableHeaderIcon ReactVirtualized__Table__sortableHeaderIcon--ASC"
          height={18}
          viewBox="0 0 24 24"
          width={18}
        >
          <path
            d="M7 14l5-5 5 5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        aria-label="Description"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "1 1 100px",
            "flex": "1 1 100px",
            "msFlex": "1 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Description"
        >
          Description
        </span>
      </div>
      <div
        aria-label="Bla"
        className="ReactVirtualized__Table__headerColumn bpk-data-table__header-column ReactVirtualized__Table__sortableHeaderColumn"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="columnheader"
        style={
          Object {
            "WebkitFlex": "0 1 100px",
            "flex": "0 1 100px",
            "msFlex": "0 1 100px",
          }
        }
        tabIndex={0}
      >
        <span
          className="ReactVirtualized__Table__headerTruncatedText"
          title="Bla"
        >
          Bla
        </span>
      </div>
    </div>
    <div
      aria-label="grid"
      aria-readonly={true}
      className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
      id={undefined}
      onScroll={[Function]}
      role="rowgroup"
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "boxSizing": "border-box",
          "direction": undefined,
          "height": 140,
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "width": 0,
          "willChange": "transform",
        }
      }
      tabIndex={0}
    />
  </div>
</div>
`;
